# ts-riscv-template

./: Cargo.toml  README.md  config.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
package/: package.json  run.ts
scripts/: compile.sh  install.sh
src/: build.rs  index.js  main.rs
wasm/: run.wasm
